--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -71,7 +71,7 @@
             <ul class="nav navbar-nav navbar-right">
                     <% if(!session.user){%>
                       <li><a href="/login">Login</a></li>
-                      <li><a href="#">Registro</a></li>
+                      <li><a href="/signup">Registro</a></li>
       <%}else{%>
         <li>
           <a href="#"> <%=session.user.username%> </a>
