--- a/views/tracks/new.ejs
+++ b/views/tracks/new.ejs
@@ -4,7 +4,7 @@
 	<div class="col-xs-12 LetrasBlancas text-center containerSubida">
 		<h1>Upload new Track</h1>
 	
-	<%if(session.user){%>}
+	<%if(session.user){%>
 		<form action="/tracks" method="post" enctype="multipart/form-data">  
 
 			<div class="col-xs-12 col-sm-6">
