--- a/views/tracks/index.ejs
+++ b/views/tracks/index.ejs
@@ -29,6 +29,11 @@
 						      	     						 	  <div class="item-content">
           <div class="item-text">
 						        <p class='lead'><%=tracks[t].name%></p>
+
+						         <p> <img src="/images/user.png"> 20 Followers, 2 Posts</p>
+						        <p>
+
+
 						       <!-- <p>20 Followers, 2 Posts</p>
 						        <p>
 						          <img src="//placehold.it/28X28/ededed">          
