--- a/views/tracks/index.ejs
+++ b/views/tracks/index.ejs
@@ -30,7 +30,7 @@
           <div class="item-text">
 						        <p class='lead'><%=tracks[t].name%></p>
 
-						         <p> <img src="/images/user.png"> 20 Followers, 2 Posts</p>
+						         <p> <img class="imgUser" src="/images/user.png"> 20 Followers, 2 Posts</p>
 						        <p>
 
 
