--- a/views/tracks/index.ejs
+++ b/views/tracks/index.ejs
@@ -28,9 +28,11 @@
 						      <div class="panel-body">
 						      	     						 	  <div class="item-content">
           <div class="item-text">
+
+          						<p> <img class="imgUser" src="/images/user.png"> <a href="'#"+<%=tracks[t]._uploadById%>+"'" ><%=tracks[t]._uploadByName%></a></p>
 						        <p class='lead'><%=tracks[t].name%></p>
 
-						         <p> <img class="imgUser" src="/images/user.png"> 20 Followers, 2 Posts</p>
+						         
 						        <p>
 
 
