--- a/views/tracks/index.ejs
+++ b/views/tracks/index.ejs
@@ -29,7 +29,8 @@
 						      	     						 	  <div class="item-content">
           <div class="item-text">
 
-								<% if (tracks[t]._uploadById != null){%>
+<%=tracks[t]._uploadById %>
+								<% if(tracks[t]._uploadById != null){%>
           						<p> <img class="imgUser" src="/images/user.png"> <a href="#"><%=tracks[t]._uploadByName%></a></p>
           						<%}%>
 						        <p class='lead'><%=tracks[t].name%></p>
