--- a/views/tracks/index.ejs
+++ b/views/tracks/index.ejs
@@ -31,10 +31,10 @@
 
 							<% if(tracks[t]._uploadBy != null){%>
 							<div class="row">
-								<div class="col-xs-3">
+								<div class="col-xs-3 ">
 									<img class="imgUser" src="/images/user.png"> 
 								</div>
-								<div class="col-xs-6">
+								<div class="col-xs-6 text-left">
 									<p><a href="#"><%=tracks[t]._uploadByName%></a></p>
 								</div>
 
