--- a/views/tracks/index.ejs
+++ b/views/tracks/index.ejs
@@ -35,14 +35,14 @@
 												<img class="imgUser img-rounded" src="/images/user.png"> 
 											</div>
 											<div class="col-xs-11 text-left">
-												<p><a href="#"><%=tracks[t]._uploadByName%></a></p>
+												<p><a href="/user/<%=tracks[t]._uploadBy%>"><%=tracks[t]._uploadByName%></a></p>
 											</div>
 
 										</div>
 										<%}%>
 										<p class='lead'><%=tracks[t].name%></p>
 
-										
+
 										<p>
 
 
