--- a/views/tracks/index.ejs
+++ b/views/tracks/index.ejs
@@ -32,7 +32,7 @@
 										<% if(tracks[t]._uploadBy != null){%>
 										<div class="row">
 											<div class="col-xs-1 ">
-												<img class="imgUser img-rounded" src="/images/user.png"> 
+												<a href="/user/<%=tracks[t]._uploadBy%>"><img class="imgUser img-rounded" src="/images/user.png"></a>
 											</div>
 											<div class="col-xs-11 text-left">
 												<p><a href="/user/<%=tracks[t]._uploadBy%>"><%=tracks[t]._uploadByName%></a></p>
