--- a/views/tracks/new.ejs
+++ b/views/tracks/new.ejs
@@ -3,60 +3,67 @@
 
 	<div class="col-xs-12 LetrasBlancas text-center containerSubida">
 		<h1>Upload new Track</h1>
-	
-	<%if(session.user){%>
+
+		<%if(session.user){%>
 		<form action="/tracks" method="post" enctype="multipart/form-data">  
 
 			<div class="col-xs-12 col-sm-6">
-				</br>
-						<div class="col-xs-12">
-				  <label class="upload_field" for="track"><h2>Upload a new track:</h2></label>	
+			</br>
+			<div class="col-xs-12">
+				<label class="upload_field" for="track"><h2>Upload a new track:</h2></label>	
 			</div>
 			<div class="col-xs-12">
-				  <span class="hint upload_field">(Supported files: MP3, Wav, and Ogg)</span>
+				<span class="hint upload_field">(Supported files: MP3, Wav, and Ogg)</span>
 			</div>
 			<div class="col-xs-12">
-				  <input class="upload_field" type="file" name="track"/>
+				<input class="upload_field" type="file" name="track"/>
 			</div>
-			</div>
-<div class="col-xs-12 col-sm-6">
+
+			<select name="estilo">
+  				<option value="Rock">Rock</option>
+  				<option value="Classic">Classic</option>
+  				<option value="Pop">Pop</option>
+			</select>
+
+		</div>
+		<div class="col-xs-12 col-sm-6">
 
 			<div class="col-xs-12">
 				<div class="desaparecer">
 					<hr>
 				</div>	
 				<h2>Cover</h2>
-				  <div class="fileinput fileinput-new" data-provides="fileinput">
-  <div class="fileinput-preview thumbnail" data-trigger="fileinput" style="width: 200px; height: 150px;margin:auto;"></div>
-  <div>
-  	<br>
-   <input class="" type="file" name="coverPhoto">
-   <br>
-    <a href="#" class="btn btn-default fileinput-exists btn-loginOscuro" data-dismiss="fileinput">Remove</a>
-  </div>
-</div>
-</div>
+				<div class="fileinput fileinput-new" data-provides="fileinput">
+					<div class="fileinput-preview thumbnail" data-trigger="fileinput" style="width: 200px; height: 150px;margin:auto;"></div>
+					<div>
+						<br>
+						<input class="" type="file" name="coverPhoto">
+						<br>
+						<a href="#" class="btn btn-default fileinput-exists btn-loginOscuro" data-dismiss="fileinput">Remove</a>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-12">
-				<hr>
-				
-  <button class="upload_field btn btn-large btn-loginOscuro btn-upload" type="submit">Upload</button>
-			</div>
-			
+		</div>
+		<div class="col-xs-12">
+			<hr>
 
-
-   <!--<input class="upload_field" type="file" name="coverPhoto"/>-->
+			<button class="upload_field btn btn-large btn-loginOscuro btn-upload" type="submit">Upload</button>
+		</div>
 
 
 
+		<!--<input class="upload_field" type="file" name="coverPhoto"/>-->
 
-</form>
-<%}else{%>}
-<p>Prueba a registrarte para poder subir Tracks y obtener otros beneficios increibles</p>
-<p><a href="/login">Registro</a></p>
 
-<%}%>}
-	</div>
+
+
+	</form>
+	<%}else{%>}
+	<p>Prueba a registrarte para poder subir Tracks y obtener otros beneficios increibles</p>
+	<p><a href="/login">Registro</a></p>
+
+	<%}%>}
+</div>
 
 </div>
 
