--- a/views/tracks/index.ejs
+++ b/views/tracks/index.ejs
@@ -6,13 +6,16 @@
 				$('.cancion').removeClass('blueI');" class="btn btn-primary btn-lg btn-filter">Todas</a>
 				<a onclick="
 				$('.cancion').removeClass('blueI');
-				$('.Pop').addClass('blueI');" class="btn btn-primary btn-lg btn-filter">Pop</a>
+				$('.cancion').addClass('blueI');
+				$('.Pop').removeClass('blueI');" class="btn btn-primary btn-lg btn-filter">Pop</a>
 				<a onclick="
-				$('.cancion').removeClass('blueI');
-				$('.Classic').addClass('blueI');" class="btn btn-primary btn-lg btn-filter">Classic</a>
+					$('.cancion').removeClass('blueI');
+				$('.cancion').addClass('blueI');
+				$('.Classic').removeClass('blueI');" class="btn btn-primary btn-lg btn-filter">Classic</a>
 				<a onclick="
-				$('.cancion').removeClass('blueI');
-				$('.Rock').addClass('blueI');" class="btn btn-primary btn-lg btn-filter">Rock</a>	
+					$('.cancion').removeClass('blueI');
+				$('.cancion').addClass('blueI');
+				$('.Rock').removeClass('blueI');" class="btn btn-primary btn-lg btn-filter">Rock</a>	
 			</div>
 		</div>
 
