--- a/views/tracks/new.ejs
+++ b/views/tracks/new.ejs
@@ -19,12 +19,16 @@
 				<input class="upload_field" type="file" name="track"/>
 			</div>
 
-			<select name="estilo">
-  				<option value="Rock">Rock</option>
-  				<option value="Classic">Classic</option>
-  				<option value="Pop">Pop</option>
-			</select>
 
+			<br>
+			<div class="col-xs-12">
+				<h2>style of the Track;</h2>
+				<select class="form-control" name="estilo">
+					<option value="Rock">Rock</option>
+					<option value="Classic">Classic</option>
+					<option value="Pop">Pop</option>
+				</select>
+			</div>
 		</div>
 		<div class="col-xs-12 col-sm-6">
 
