--- a/views/tracks/show.ejs
+++ b/views/tracks/show.ejs
@@ -20,7 +20,7 @@
 				<h1><%=track.name%></h1>
 
 					 <% if(session.user){%>
-					 <%= if(session.user.id == track._uploadBy){%>
+					 <% if(session.user.id == track._uploadBy){%>
 				<form method="post" action="/tracks/<%=track._id%>?_method=delete">
 					<button type="submit" onClick="return confirm('Delete: <%=track.name%>. Are you sure? ');">
 						Delete track
