--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -74,6 +74,7 @@
                       <li><a href="/signup">Registro</a></li>
       <%}else{%>
         <li>
+            <img class="imgUser img-rounded" src="/images/user.png">
           <a href="#"> <%=session.user.username%> </a>
         </li>  
           <li>
