--- a/views/tracks/show.ejs
+++ b/views/tracks/show.ejs
@@ -21,9 +21,9 @@
 
 					 <% if(session.user){%>
 					 <% if(session.user.id == track._uploadBy){%>
-				<form method="post" action="/tracks/<%=track._id%>?_method=delete">
+				<form class="btn btn-danger" method="post" action="/tracks/<%=track._id%>?_method=delete">
 					<button type="submit" onClick="return confirm('Delete: <%=track.name%>. Are you sure? ');">
-						Delete track
+						Delete track <span class="glyphicon glyphicon-trash"></span>
 					</button>
 				</form>
 					 <%}}%>
