--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -77,7 +77,7 @@
            <img class="imgUser img-rounded" src="/images/user.png">
       </li>
         <li>
-                     <a href="/user/<%session.user.id%>"> <%=session.user.username%> </a>
+                     <a href="/user/<%=session.user.id%>"> <%=session.user.username%> </a>
         </li>  
           <li>
           <a href="/logout">  Logout <span class="glyphicon glyphicon-log-out"></span>
